# tmux-sessions

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/adapters/: AGENTS.md  fuzzy.rs  mod.rs  tmux.rs  zoxide.rs
src/adapters/tmux/: AGENTS.md  adapter_impl.rs  capture.rs  command.rs  fake.rs  parser.rs  raw.rs
src/app/: AGENTS.md  controller.rs  event_action_coordinator.rs  events.rs  executor.rs  loader.rs  mod.rs  preview_orchestrator.rs  state.rs  state_helpers.rs  terminal_lifecycle.rs  tmux_window_mapper.rs
src/domain/: AGENTS.md  action.rs  entry.rs  error.rs  grouped_list.rs  mod.rs  path_name.rs  session.rs  snapshot.rs  sort.rs
src/preview/: AGENTS.md  ansi.rs  assembly.rs  directory.rs  generator.rs  loader.rs  mod.rs  pane_capture.rs  types.rs
src/ui/: AGENTS.md  list.rs  mod.rs  preview.rs  theme.rs
tests/: action_executor_test.rs  integration_test.rs  latency_test.rs  popup_e2e_test.rs  regression_test.rs  snapshot_loader_test.rs  ui_test.rs
